--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:migrate": "prisma migrate deploy",
-    "postinstall": "npm run prisma:generate"
+    "postinstall": "if [ -f prisma/schema.prisma ]; then npm run prisma:generate; fi"
   },
   "repository": {
     "type": "git",
