--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "passport-local": "^1.0.0",
     "prisma": "^6.12.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.8",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
