--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/platform-express": "^11.1.5",
     "@prisma/client": "^6.12.0",
     "@supabase/supabase-js": "^2.53.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.8",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
